--- a/sam.ipynb
+++ b/sam.ipynb
@@ -206,11 +206,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4d7f5753-33d8-4e39-bed4-15e64ed9c2d1",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 'Wii Sports', 'Wii', ..., 3.77, 8.46, 82.74],\n",
+       "       [2, 'Super Mario Bros.', 'NES', ..., 6.81, 0.77, 40.24],\n",
+       "       [3, 'Mario Kart Wii', 'Wii', ..., 3.79, 3.31, 35.82],\n",
+       "       ...,\n",
+       "       [16598, 'SCORE International Baja 1000: The Official Game', 'PS2',\n",
+       "        ..., 0.0, 0.0, 0.01],\n",
+       "       [16599, 'Know How 2', 'DS', ..., 0.0, 0.0, 0.01],\n",
+       "       [16600, 'Spirits & Spells', 'GBA', ..., 0.0, 0.0, 0.01]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aaef2d1-3c77-4aed-a950-5d9c16358793",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l"
+   ]
   }
  ],
  "metadata": {
