--- a/music.ipynb
+++ b/music.ipynb
@@ -339,8 +339,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ae8cc858-06ab-4621-8a30-59053786584a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        HipHop\n",
+       "1        HipHop\n",
+       "2        HipHop\n",
+       "3          Jazz\n",
+       "4          Jazz\n",
+       "5          Jazz\n",
+       "6     Classical\n",
+       "7     Classical\n",
+       "8     Classical\n",
+       "9         Dance\n",
+       "10        Dance\n",
+       "11        Dance\n",
+       "12     Acoustic\n",
+       "13     Acoustic\n",
+       "14     Acoustic\n",
+       "15    Classical\n",
+       "16    Classical\n",
+       "17    Classical\n",
+       "Name: genre, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = music_data['genre']\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02dd404-0c47-475f-8793-bbdd4c45645d",
    "metadata": {},
    "outputs": [],
    "source": []
