Visualizin Decision trees

--- a/music.ipynb
+++ b/music.ipynb
@@ -16,6 +16,7 @@
     "X =music_data.drop(columns=['genre'])\n",
     "y = music_data['genre']\n",
     "\n",
+    "# Decision trees\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X,y)\n",
     "\n",
@@ -30,6 +31,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b639f963",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
