Visualizin Decision trees

--- a/music.ipynb
+++ b/music.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "# Decision trees\n",
     "model = DecisionTreeClassifier()\n",
-    "model.fit(X,y)\n",
+    "model.fit(X,y) # train\n",
     "\n",
     "tree.export_graphviz(model, out_file='music-recommender.dot',\n",
     "                    feature_names=['age', 'gender'],\n",
