--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -261,11 +261,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Anonymous lamda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function without a name\n",
+    "multiply = lambda x, y: x * y\n",
+    "print(multiply(4, 5))\n",
+    "\n",
+    "sum = lambda x, y: x + y\n",
+    "print(sum(4, 5))\n",
+    "\n",
+    "remainder = lambda x, y: x % y\n",
+    "print(remainder(23, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2034568483\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(n):\n",
+    "    return lambda x: x * n\n",
+    "\n",
+    "test_1 = test(18797)\n",
+    "print(test_1(108239))"
+   ]
   },
   {
    "cell_type": "code",
