--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -321,6 +321,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no 'X' in the message\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"DeepSeek is taking on OpenAI\"\n",
+    "for item in message:\n",
+    "    if item == \"X\":\n",
+    "        break\n",
+    "\n",
+    "else: \n",
+    "    print(\"There is no 'X' in the message\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access granted\n",
+      "Access granted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# password checking program\n",
+    "for x in range(12):\n",
+    "    password = input(\"Enter your password: \")\n",
+    "    if password == \"password\":\n",
+    "        break\n",
+    "    print(\"Access granted\")\n",
+    "else:\n",
+    "    print(\"Access denied\")\n",
+    "    print(\"Thank you for your patience\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
