--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -344,28 +344,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Access granted\n",
-      "Access granted\n"
+      "Access denied\n",
+      "Access denied\n",
+      "Access denied\n",
+      "Access denied. You have exceeded the maximum number of attempts\n"
      ]
     }
    ],
    "source": [
     "# password checking program\n",
-    "for x in range(12):\n",
+    "attempts = 0\n",
+    "while attempts < 3:\n",
     "    password = input(\"Enter your password: \")\n",
     "    if password == \"password\":\n",
+    "        print(\"Access granted\")\n",
     "        break\n",
-    "    print(\"Access granted\")\n",
-    "else:\n",
-    "    print(\"Access denied\")\n",
-    "    print(\"Thank you for your patience\")"
+    "    else:\n",
+    "        print(\"Access denied\")\n",
+    "        attempts += 1\n",
+    "if attempts == 3:\n",
+    "    print(\"Access denied. You have exceeded the maximum number of attempts\")"
    ]
   },
   {
