--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -375,6 +375,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red Toyota Corolla\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    color = \"red\"\n",
+    "    make = \"Toyota\"\n",
+    "    model = \"Corolla\"\n",
+    "model_1 = Car()\n",
+    "print(model_1.color, model_1.make, model_1.model)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color: red\n",
+      "Make: Toyota\n",
+      "Model: Corolla\n",
+      "Color: blue\n",
+      "Make: Toyota\n",
+      "Model: Corolla\n",
+      "Beep beep\n",
+      "Color: red\n",
+      "Make: Toyota\n",
+      "Model: Corolla\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self, color, make, model):\n",
+    "        self.color = color\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "\n",
+    "    def display_vehicle(self):\n",
+    "        print(f\"Color: {self.color}\")\n",
+    "        print(f\"Make: {self.make}\")\n",
+    "        print(f\"Model: {self.model}\")\n",
+    "    \n",
+    "    def change_color(self, new_color):\n",
+    "        self.color = new_color\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def honk():\n",
+    "        print(\"Beep beep\")\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def get_vehicle(cls):\n",
+    "        return cls(\"red\", \"Toyota\", \"Corolla\")\n",
+    "\n",
+    "vehicle_1 = Vehicle(\"red\", \"Toyota\", \"Corolla\")\n",
+    "vehicle_1.display_vehicle()\n",
+    "\n",
+    "vehicle_1.change_color(\"blue\")\n",
+    "vehicle_1.display_vehicle()\n",
+    "\n",
+    "Vehicle.honk() # Output: Beep beep\n",
+    "vehicle_2 = Vehicle.get_vehicle()\n",
+    "\n",
+    "vehicle_2.display_vehicle()\n",
+    "vehicle_2.get_vehicle()\n",
+    "\n",
+    "del vehicle_2 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mammal\n",
+      "Roar\n",
+      "Mammal\n",
+      "Bark\n",
+      "Bulldog\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, species, sound):\n",
+    "        self.species = species\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        print(self.sound)\n",
+    "\n",
+    "    def display_species(self):\n",
+    "        print(self.species)\n",
+    "\n",
+    "mammmal = Animal(\"Mammal\", \"Roar\")\n",
+    "mammmal.display_species()\n",
+    "mammmal.make_sound()\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self, species, sound, breed):\n",
+    "        super().__init__(species, sound) # Call the __init__ method of the parent class\n",
+    "        self.breed = breed\n",
+    "\n",
+    "    def display_breed(self):\n",
+    "        print(self.breed)\n",
+    "\n",
+    "dog = Dog(\"Mammal\", \"Bark\", \"Bulldog\")\n",
+    "dog.display_species()\n",
+    "dog.make_sound()\n",
+    "dog.display_breed()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
