--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -518,6 +518,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [expression for item in iterable if condition]\n",
+    "[print(i) for i in range(10) if i % 2 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set comprehension\n",
+    "set_comprehension = {x**2 for x in range(10)}\n",
+    "print(\"Set comprehension:\", set_comprehension)\n",
+    "\n",
+    "# Tuple comprehension (Note: There is no direct tuple comprehension, but you can use a generator expression and convert it to a tuple)\n",
+    "tuple_comprehension = tuple(x**2 for x in range(10))\n",
+    "print(\"Tuple comprehension:\", tuple_comprehension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary comprehension\n",
+    "squares = {x: x**2 for x in range(10)}\n",
+    "print(\"Dictionary comprehension:\", squares)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
