--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -229,6 +229,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sets, Tuples and Lists\n",
+    "* Lists -> ordered mutable collection of items. Ex. marks = [1,2,2,3,4]\n",
+    "* Tuple -> ordered immutable collection of items. Ex. marks =(1,2,2,3,4)\n",
+    "* Sets -> Unordered mutable collection of unique items. Ex. marks = {1,2,3,4}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
