--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -593,6 +593,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Built-in modules in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('_abc', '_ast', '_bisect', '_blake2', '_codecs', '_collections', '_csv', '_datetime', '_elementtree', '_functools', '_heapq', '_imp', '_io', '_locale', '_md5', '_operator', '_pickle', '_posixsubprocess', '_random', '_sha1', '_sha256', '_sha3', '_sha512', '_signal', '_socket', '_sre', '_stat', '_statistics', '_string', '_struct', '_symtable', '_thread', '_tracemalloc', '_warnings', '_weakref', 'array', 'atexit', 'binascii', 'builtins', 'cmath', 'errno', 'faulthandler', 'fcntl', 'gc', 'grp', 'itertools', 'marshal', 'math', 'posix', 'pwd', 'pyexpat', 'select', 'spwd', 'sys', 'syslog', 'time', 'unicodedata', 'xxsubtype', 'zlib')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# List all built-in modules\n",
+    "builtin_modules = sys.builtin_module_names\n",
+    "print(builtin_modules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "julia"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Generate a random integer between 1 and 10\n",
+    "random_int = random.randint(1, 10)\n",
+    "print(f\"Random integer between 1 and 10: {random_int}\")\n",
+    "\n",
+    "# Generate a random float between 0 and 1\n",
+    "random_float = random.random()\n",
+    "print(f\"Random float between 0 and 1: {random_float}\")\n",
+    "\n",
+    "# Choose a random element from a list\n",
+    "colors = [\"red\", \"blue\", \"green\", \"yellow\"]\n",
+    "random_color = random.choice(colors)\n",
+    "print(f\"Random color: {random_color}\")\n",
+    "\n",
+    "# Shuffle a list\n",
+    "random.shuffle(colors)\n",
+    "print(f\"Shuffled colors: {colors}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
