--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -117,9 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry')\n",
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a tuple\n",
     "fruits = (\"apple\", \"banana\", \"cherry\")\n",
@@ -134,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n",
+      "['apple', 'banana', 'cherry', 'orange']\n",
+      "banana\n",
+      "['apple', 'cherry', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a list\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
@@ -157,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 'red', 'banana': 'yellow', 'cherry': 'red'}\n",
+      "yellow\n",
+      "{'apple': 'red', 'banana': 'yellow', 'cherry': 'red', 'orange': 'orange'}\n",
+      "{'apple': 'red', 'cherry': 'red', 'orange': 'orange'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a dictionary\n",
     "fruit_colors = {\"apple\": \"red\", \"banana\": \"yellow\", \"cherry\": \"red\"}\n",
@@ -179,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -240,9 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List: [1, 2, 3, 4, 5]\n",
+      "List after append: [1, 2, 3, 4, 5, 6]\n",
+      "Tuple: (1, 2, 3, 4, 5)\n",
+      "Set: {1, 2, 3, 4, 5}\n",
+      "Set after add: {1, 2, 3, 4, 5, 6}\n",
+      "Set after adding duplicate: {1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
     "# List example\n",
     "my_list = [1, 2, 3, 4, 5]\n",
@@ -279,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -310,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -354,17 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Access denied\n",
-      "Access denied\n",
-      "Access denied\n",
-      "Access denied. You have exceeded the maximum number of attempts\n"
+      "Access granted\n"
      ]
     }
    ],
@@ -385,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +597,7 @@
        "[None, None, None, None, None]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,9 +609,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set comprehension: {0, 1, 64, 4, 36, 9, 16, 49, 81, 25}\n",
+      "Tuple comprehension: (0, 1, 4, 9, 16, 25, 36, 49, 64, 81)\n"
+     ]
+    }
+   ],
    "source": [
     "# Set comprehension\n",
     "set_comprehension = {x**2 for x in range(10)}\n",
@@ -583,9 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary comprehension: {0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}\n"
+     ]
+    }
+   ],
    "source": [
     "# Dictionary comprehension\n",
     "squares = {x: x**2 for x in range(10)}\n",
@@ -601,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -622,32 +680,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random integer between 1 and 9000000: 3214215\n",
+      "Random float between 0 and 1: 0.9800258271176722\n",
+      "Random color: blue\n",
+      "Shuffled colors: ['blue', 'black', 'yellow', 'red', 'grey', 'green']\n",
+      "Done!\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import random\n",
+    "import random #Alt: from random import randint, random, choice, shuffle\n",
     "\n",
     "# Generate a random integer between 1 and 10\n",
-    "random_int = random.randint(1, 10)\n",
-    "print(f\"Random integer between 1 and 10: {random_int}\")\n",
+    "random_int = random.randint(4, 9000000)\n",
+    "print(f\"Random integer between 1 and 9000000: {random_int}\")\n",
     "\n",
     "# Generate a random float between 0 and 1\n",
     "random_float = random.random()\n",
     "print(f\"Random float between 0 and 1: {random_float}\")\n",
     "\n",
     "# Choose a random element from a list\n",
-    "colors = [\"red\", \"blue\", \"green\", \"yellow\"]\n",
+    "colors = [\"red\", \"blue\", \"green\", \"yellow\",\"grey\", \"black\" ]\n",
     "random_color = random.choice(colors)\n",
     "print(f\"Random color: {random_color}\")\n",
     "\n",
     "# Shuffle a list\n",
     "random.shuffle(colors)\n",
-    "print(f\"Shuffled colors: {colors}\")"
+    "print(f\"Shuffled colors: {colors}\")\n",
+    "\n",
+    "print(\"Done!\")"
    ]
   },
   {
