--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -696,7 +696,7 @@
     }
    ],
    "source": [
-    "import random #Alt: from random import randint, random, choice, shuffle\n",
+    "import random #Altanatively: from random import randint, random, choice, shuffle\n",
     "\n",
     "# Generate a random integer between 1 and 10\n",
     "random_int = random.randint(4, 9000000)\n",
