Update: Math module

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -719,6 +719,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Math module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.718281828459045\n",
+      "3.141592653589793\n",
+      "180.0\n",
+      "3.141592653589793\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9986376117378207"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.sqrt(16) # Output: 4.0\n",
+    "print(math.e)\n",
+    "print(math.pi)\n",
+    "print(math.degrees(math.pi))\n",
+    "print(math.radians(180))\n",
+    "math.sin(83.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
