Update: Statistics module

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -743,10 +743,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9986376117378207"
+       "1.0471975511965979"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,15 +759,54 @@
     "print(math.pi)\n",
     "print(math.degrees(math.pi))\n",
     "print(math.radians(180))\n",
-    "math.sin(83.2)"
+    "math.sin(83.2)\n",
+    "math.acos(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The inverse cosine (arccos) of 0.5 is 1.0471975511965979 radians\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "angle = 0.5  # Example angle in radians\n",
+    "inverse_cosine = math.acos(angle)\n",
+    "print(f\"The inverse cosine (arccos) of {angle} is {inverse_cosine} radians\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "statistics.mean([1, 2, 3, 4, 4])  # Output: 2.8\n",
+    "statistics.median([1, 2, 3, 4, 4])  # Output: 3\n",
+    "statistics.NormalDist(mu=0, sigma=1).pdf(0)  # Output: 0.3989422804014327\n",
+    "statistics.mode([1, 2, 3, 4, 4])  # Output: 4"
+   ]
   },
   {
    "cell_type": "code",
