Update: Statistics module

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -786,16 +786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "1.3038404810405297"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,8 @@
     "statistics.mean([1, 2, 3, 4, 4])  # Output: 2.8\n",
     "statistics.median([1, 2, 3, 4, 4])  # Output: 3\n",
     "statistics.NormalDist(mu=0, sigma=1).pdf(0)  # Output: 0.3989422804014327\n",
-    "statistics.mode([1, 2, 3, 4, 4])  # Output: 4"
+    "statistics.mode([1, 2, 3, 4, 4])  # Output: 4\n",
+    "statistics.stdev([1, 2, 3, 4, 4])  # Output: 1.3038404810405297"
    ]
   },
   {
