Update: Errors in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -811,6 +811,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1236417019.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[66], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    In Python, there are several types of errors that you might encounter. Here are some common ones:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In Python, there are several types of errors that you might encounter. Here are some common ones:\n",
+    "\n",
+    "# 1. **SyntaxError**: This occurs when the code is not written in proper Python syntax.\n",
+    "if True:\n",
+    "    print(\"Hello\")  # Missing colon (:) after the if statement\n",
+    "\n",
+    "# 2. **IndentationError**: This occurs when the code is not properly indented.\n",
+    "def my_function():\n",
+    "    print(\"Hello\")  # This line should be indented\n",
+    "\n",
+    "# 3. **NameError**: This occurs when a variable or function name is not found.\n",
+    "print(x)  # x is not defined\n",
+    "\n",
+    "# 4. **TypeError**: This occurs when an operation or function is applied to an object of inappropriate type.\n",
+    "print(\"Hello\" + 5)  # Cannot concatenate a string and an integer\n",
+    "\n",
+    "# 5. **ValueError**: This occurs when a function receives an argument of the right type but inappropriate value.\n",
+    "int(\"Hello\")  # Cannot convert a string that is not a number to an integer\n",
+    "\n",
+    "# 6. **IndexError**: This occurs when trying to access an element from a list using an index that is out of range.\n",
+    "my_list = [1, 2, 3]\n",
+    "print(my_list[5])  # Index 5 is out of range\n",
+    "\n",
+    "# 7. **KeyError**: This occurs when trying to access a dictionary with a key that does not exist.\n",
+    "my_dict = {\"a\": 1, \"b\": 2}\n",
+    "print(my_dict[\"c\"])  # Key 'c' does not exist\n",
+    "\n",
+    "# 8. **AttributeError**: This occurs when trying to access an attribute that does not exist for an object.\n",
+    "my_list = [1, 2, 3]\n",
+    "my_list.append(4)\n",
+    "my_list.push(5)  # 'list' object has no attribute 'push'\n",
+    "\n",
+    "# 9. **ImportError**: This occurs when an import statement fails to find the module definition or when a from ... import fails to find a name that is to be imported.\n",
+    "import non_existent_module  # No module named 'non_existent_module'\n",
+    "\n",
+    "# 10. **ZeroDivisionError**: This occurs when a division or modulo operation is performed with zero as the divisor.\n",
+    "print(10 / 0)  # Division by zero\n",
+    "\n",
+    "# These are just a few examples of common errors in Python. Understanding these errors can help you debug your code more effectively."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
