Update: Exceptions in python

--- a/Python/python_basics.ipynb
+++ b/Python/python_basics.ipynb
@@ -870,6 +870,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "try:\n",
+    "    # Code that may raise an exception\n",
+    "    result = 10 / 0\n",
+    "except ZeroDivisionError as e:\n",
+    "    # Code to handle the exception\n",
+    "    print(f\"Error: {e}\")\n",
+    "else:\n",
+    "    # Code to execute if no exception is raised\n",
+    "    print(\"No exceptions were raised.\")\n",
+    "finally:\n",
+    "    # Code to execute regardless of whether an exception was raised or not\n",
+    "    print(\"This block is always executed.\")\n",
+    "\n",
+    "# Example with multiple exceptions\n",
+    "try:\n",
+    "    value = int(\"Hello\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"ValueError: {e}\")\n",
+    "except TypeError as e:\n",
+    "    print(f\"TypeError: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
